[package]
name = "printrs"
version = "0.1.0"
edition = "2024"

[lib]
name = "printrs"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "printrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["color", "derive"] }
colored = "3.0.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
bindgen = "0.72.0"
